--- a/src/styles/SubjectProposal.module.css
+++ b/src/styles/SubjectProposal.module.css
@@ -1,6 +1,6 @@
 .imagecontainer {
   display: grid;
-  width: auto;
+  min-width: 577px;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   text-align: center;
   margin: 0.5rem;
