--- a/src/styles/Feed.module.css
+++ b/src/styles/Feed.module.css
@@ -305,13 +305,13 @@
   background-color: transparent; 
   border: none; color: #606770; 
   font-weight: 600; 
-  padding: 8px; 
+  padding: 0px; 
   margin: auto;
 }
 
 .likecount { 
   font-size: 1rem; 
-  padding: 10px; 
+  margin-left: .3rem; 
 }
 
 .subCommentBtn {
@@ -327,8 +327,7 @@
 }
 
 .commentInputSection {
-  margin-right: .5rem;
-  margin-left: 1.5rem;
+ margin: 0 .3rem;
 }
 
 /*.likeSingleComment{
@@ -336,6 +335,7 @@
   align-items: center;
 }
 */
+
 @media screen and (max-width: 650px) {
   .card {
     padding: 1px;
