--- a/src/styles/Accueil.module.css
+++ b/src/styles/Accueil.module.css
@@ -51,9 +51,58 @@
   margin-right: 1rem;
 }
 
+/* ------------------ subjects css---------------- */
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 
 
+.headercontainerlogo {
+  display: flex;
+  justify-content: space-evenly ;
+}
+
+.avatarChoice:hover {
+  border: 4px solid white;
+}
+
+.imagecontainer {
+  margin: 0.5rem;
+}
+
+.imagecontainer ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0.5rem;
+  padding: 0;
+}
+
+.imagecontainer ul li {
+  list-style-type: none;
+  margin: 0 auto;
+}
+
+.topcards {
+  background-color: #2a91cc;
+  padding: 8px;
+  border-radius: 10%;
+  height: 70px;
+  width: 70px;
+}
+
+
+
+
+
+
+
+
+/* --------------main------------------ */
 .main{
   margin: 0 auto;
   max-width: 600px;
