--- a/src/styles/Feed.module.css
+++ b/src/styles/Feed.module.css
@@ -28,6 +28,16 @@
 
 }
 
+.content {
+  margin: .5rem;
+  contain: content;
+  word-wrap: break-word;
+  color: rgb(255, 255, 255);
+  padding: .3rem;
+  font-family: sans-serif;
+
+}
+
 .userlogo {
   width: 40px;
   height: 40px;
@@ -62,6 +72,15 @@
   text-align: center;
   color: rgb(255, 255, 255);
   background-color: #000000c5;
+  font-weight: 600;
+
+}
+
+.userUnderIcon {
+  margin-top: 5px;
+  font-size: 18px;
+  font-family:sans-serif;
+  font-weight: 700;
 }
 
 .commentsContainer {
@@ -193,8 +212,8 @@
   background-color: #23282b;
   color: white;
   font-size: large;
-  height: 3rem;
-  padding: 1rem;
+  height: 2.5rem;
+  padding: .5rem;
   font-size: 17px;
   
 }
@@ -219,6 +238,7 @@
   font-family: sans-serif;
   margin-top: 1rem;
   margin-bottom: .3rem;
+  font-weight: 600;
 }
 
 .subjectLabel{
@@ -227,6 +247,8 @@
   font-family: sans-serif;
   margin-top: 1rem;
   margin-bottom: .3rem;
+  font-weight: 600;
+
 }
 
 .contentInput{
@@ -266,6 +288,9 @@
   background-color: #fff;
   border-radius: 50%;
   border: 0;
+  padding-left: 9px;
+  padding-right: 9px;
+
   color: #2a91cc;
   font-size: 20px;
   font-weight: bold;
