--- a/src/styles/MobileMenu.module.css
+++ b/src/styles/MobileMenu.module.css
@@ -1,31 +1,28 @@
 .sidebar {
-    position: fixed;
+    position:fixed;
     left: 0;
     top: 0;
-    width: 250px;
+    width: auto;
     height: 100vh;
-    padding: 2rem 1rem;
+    padding: 0rem 1.5rem;
     background-color: #23a5e1;
 
 }
 
 .menu {
-    margin: 0 -1rem;
-    
+    margin: 0 -3.7rem;
 }
 
 
 .menuText {
     font-family: sans-serif;
+    font-size: 18px;
+    margin-top: 1rem;
     color: #fff;
     text-align: center;
     background-color: rgba(217, 245, 243, 0.253);
     border-radius: 5px;
     padding: 5px;
-    font-family:sans-serif;
-    font-size: 18px;
-    color: white;
-    font-weight: 600;
 }
 
 .sidebar ul {
@@ -42,6 +39,7 @@
     transition: 0.2s linear;
     font-family: sans-serif;
     font-weight: 600;
+    font-size: 12px;
     
 }
 
@@ -58,7 +56,6 @@
 .item:hover,
 .menuhome {
     color: #5cf4ff9c;
-    border-right: 5px solid #ffffff;
 }
 
 .menutoggle {
@@ -66,7 +63,7 @@
     display: block;
     top: 2rem;
     right: 2rem;
-    width: 50px;
+    width: 0px;
     height: 50px;
     border-radius: 99px;
     background-color: #00000059;
@@ -117,25 +114,35 @@
     transform: rotate(90deg);
 }
 
-@media (max-width : 1140px) {
+@media (max-width : 930px) {
 
     .sidebar {
-        width: 140px;
-        padding: 1rem 0.5rem;
-
+        visibility:visible;
     }
-    .menu {
-        margin: 0 -2.8rem;
-    }
-    .menuhome {
-        color: #5cf4ff9c;
-        border-right: none;
-    }
-    .item:hover {
-        color: #5cf4ff9c;
-        border-right: none;
-    }
+    .menutoggle {
+        visibility:visible;
+        display: block;
+        top: 2rem;
+        right: 2rem;
+        width: 50px;
+        height: 50px;
+        border-radius: 99px;
+        background-color: #00000059;
+        cursor: pointer;
     
+    }
+    .menutoggle {
+        visibility: visible;
+        display: block;
+        top: 2rem;
+        right: 2rem;
+        width: 50px;
+        height: 50px;
+        border-radius: 99px;
+        background-color: #00000059;
+        cursor: pointer;
+    
+    }
 }
 
 
@@ -170,10 +177,13 @@
     }
 }
   
-@media (max-width : 930px) {
+  
+
+@media (min-width : 931px) {
 
     .sidebar {
-        visibility: hidden;
-    
+        visibility:hidden;
     }
+
 }
+
